--- a/2023ECE226Syllabus/Syllabus.tex
+++ b/2023ECE226Syllabus/Syllabus.tex
@@ -64,8 +64,8 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Exam Formats: {
             \begin{itemize}
                 \item In total 100 points in each exam. Each will convert to 50 credits in final grade.
-                \item 80 points questions from HW. No partial credit. Need a complete calculation process.
-                \item 20 points questions modified from HW. No partial credit. Fill the blank.
+                \item 80 points questions from HW. Fill the blank. No partial credit.
+                \item 20 points questions from anywhere. With partial credit.
                 % \item 50 points challenge questions. Format unknown.
             \end{itemize}
         }
@@ -83,6 +83,7 @@ The students will learn the fundamentals of probability that are necessary for s
         % \item \textbf{(Modern Alternative)} \href{https://www.stat.berkeley.edu/~aldous/134/grinstead.pdf}{Introduction to Probability} by Grinstead and Snell
         % \item \textbf{(Optional)} \fullcite{93738109}
         % \item \textbf{(Advanced Choice)} \fullcite{94013254}
+        \item \textbf{(Lecture Note)} \href{https://github.com/kwang0913/MyLatex/blob/main/2023ECE226Note/main.pdf}{Probability and Random Processes} by Kailong Wang
     \end{enumerate}
 }
 
@@ -99,19 +100,19 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Course Introduction and Review of Calculus
         \item \textbf{(Chapter 1,2)} Combinatorics, Counting Methods, Set Theory, Axioms of Probability, Venn Diagrams
         \item Examples and Exercises
-        \item \textbf{(Chapter 1,2)}Conditional Probability, Bayes Theorem, Independence, Tree Diagrams
+        \item \textbf{(Chapter 1,2)} Conditional Probability, Bayes Theorem, Independence, Tree Diagrams
         \item Examples and Exercises
-        \item \textbf{(Chapter 3)}PMF, Discrete Random Variables, CDF, Expectation
+        \item \textbf{(Chapter 3)} PMF, Discrete Random Variables, CDF, Expectation
         \item Examples and Exercises
-        \item \textbf{(Chapter 4)}CDF, Continuous Random Variables, PDF, Gaussian Random Variable, Delta Function
+        \item \textbf{(Chapter 4)} CDF, Continuous Random Variables, PDF, Gaussian Random Variable, Delta Function
         \item Examples and Exercises
-        \item \textbf{(Chapter 5)}Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
+        \item \textbf{(Chapter 5)} Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
         \item Examples and Exercises
         \item Review
         \item Exam 1 (Cover Day1 to Day9)
-        \item \textbf{(Chapter 7)}Conditional Probability Models
+        \item \textbf{(Chapter 7)} Conditional Probability Models
         \item Examples and Exercises
-        \item \textbf{(Chapter 6,9)}Derived Random Variables, Moment Generating Function and Central Limit Theorem
+        \item \textbf{(Chapter 6,9)} Derived Random Variables, Moment Generating Function and Central Limit Theorem
         \item Examples and Exercises
         \item Introduction of Information Theory
         \item Examples and Exercises
