--- a/2023ECE226Syllabus/Syllabus.tex
+++ b/2023ECE226Syllabus/Syllabus.tex
@@ -84,6 +84,7 @@ The students will learn the fundamentals of probability that are necessary for s
         % \item \textbf{(Optional)} \fullcite{93738109}
         % \item \textbf{(Advanced Choice)} \fullcite{94013254}
         \item \textbf{(Lecture Note)} \href{https://github.com/kwang0913/MyLatex/blob/main/2023ECE226Note/main.pdf}{Probability and Random Processes} by Kailong Wang
+        % \item \textbf{(Path to Intermediate)} \fullcite{91978890}
     \end{enumerate}
 }
 
@@ -117,7 +118,7 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Introduction of Information Theory
         \item Examples and Exercises
         \item Review
-        \item Exam 2 (Cover Day10 to Day19)
+        \item Exam 2 (Cover Day10 to Day17)
         \item Random Topics
         \item Bonus Presentation and Optional Final
     \end{enumerate}
