Tried to add copula in the content

--- a/2023ECE226Note/collection/chapter2.tex
+++ b/2023ECE226Note/collection/chapter2.tex
@@ -1,4 +1,4 @@
-\chapter{Conditional Probability and Independence}
+\chapter{Conditional Probability and Independent}
 
 \section{Conditional Probability}
 \begin{theorem}
@@ -39,9 +39,9 @@
     \end{equation*}
 \end{theorem}
 
-\section{Independence}
+\section{Independent}
 \begin{definition}
-    [Independence]
+    [Independent]
     $A$ and $B$ are independent if and only if $\P{AB}=\P{A}\P{B}$.
 \end{definition}
 
