--- a/2023ECE226Note/collection/chapter6.tex
+++ b/2023ECE226Note/collection/chapter6.tex
@@ -36,7 +36,7 @@
     Let $U$ be a $\Unif(0,1)$ random variable and let $F(x)$ denote a \textnormal{CDF} with an inverse $F^{-1}(u)$ defined for $0<u<1$. Then $X=F^{-1}(U)$ is a random variable with \textnormal{CDF} $F_X(x)=F(x)$.
 \end{theorem}
 
-\subsection{Functions of Two Continuous Random Variables}
+\subsection{Functions of Joint Continuous Random Variables}
 Following the same idea as in \cref{thm:pdf_of_derived_rv}, we can easily derive the PDF of derived random variable $W=g(X,Y)$ when the function is linear. It is more complex for other functions.
 
 \begin{theorem}
