--- a/2023ECE226Note/collection/chapter5.tex
+++ b/2023ECE226Note/collection/chapter5.tex
@@ -1,4 +1,4 @@
-\chapter{Joint Probability Models}
+\chapter{Joint Random Variables}
 
 \section{Joint CDF}
 \begin{definition}[Joint CDF]
@@ -73,7 +73,7 @@ The joint PDF is non-negative and integrates to one.
 \end{definition}
 For continuous random variables, the marginal PDFs $f_X(x)$ and $f_Y(y)$ are probability models for the individual random variables $X$ and $Y$, but they only provide an \textbf{incomplete} probability model for the pair of random variables $X$ and $Y$.
 
-\section{Expected Value of a Function of Two Random Variables}
+\section{Expected Value}
 \begin{theorem}[Expected Value of a Function of Two Random Variables]
     The function of two random variables (\ie, $g(X,Y)$) is also a random variable, then the expected value of $g(X,Y)$ is
     \begin{align}
@@ -163,10 +163,10 @@ It's easy to show that if $X$ and $Y$ are independent, then
 \end{definition}
 
 \begin{theorem}
-    The relationship between independence, uncorrelatedness and orthogonality
+    The relationship between uncorrelatedness, independence and orthogonality
     \begin{enumerate}
-        \item Independence means changing the value of one random variable does not affect the probability distribution (\ie, mean, variance and other moments as well) of the other random variable.
         \item Uncorrelatedness means changing the value of one random variable does not affect the \textbf{mean} of the other random variable.
+        \item Independence means changing the value of one random variable does not affect the probability distribution (\ie, mean, variance and other moments as well) of the other random variable.
         \item Uncorrelated is linear independent. But independent includes both linear and nonlinear independent. Thus, uncorrelatedness does not imply independence. \eg, $X\sim \Unif[-1,1]$ and $Y=X^2$.
         \item Orthogonality is a different concept from uncorrelatedness and independence. From the perspective of Linear Algebra, orthogonality is a concept regarding angle between random variables, while independence and uncorrelatedness are concepts regarding the length (or projection) of random variables.
         \item Independence and Uncorrelatedness are preferred for easier calculation of the variance of linear combination of random variables.
