--- a/2023ECE226Syllabus/Syllabus.tex
+++ b/2023ECE226Syllabus/Syllabus.tex
@@ -33,12 +33,12 @@
 \title{RUTGERS UNIVERSITY, DEPARTMENT OF ECE \\
 COURSE SYLLABUS: 14:332:226}
 \author{Kailong Wang}
-\date{\today}
+\date{}
 
 \begin{document}
 \maketitle
 Probability theory studies random phenomena in a formal mathematical way. It is essential for all engineering and scientific disciplines dealing with models that depend on chance.
-Probability provides a well-defined way to quantify the uncertainty of a random event. With this framework, we can analyze the behavior of complex systems and \textbf{make informed decisions} (i.e., minimize the negative effect of bad behavior and maximize the positive effect of good behavior).
+Probability provides a well-defined way to quantify the uncertainty of a random event. With this framework, we can analyze the behavior of complex systems and \textbf{make informed decisions} (i.e., minimize the negative effect of bad behavior or maximize the positive effect of good behavior).
 With a long history development of probability theory, it plays a central role in e.g.,  telecommunications and finance systems. Telecommunications systems strive to provide reliable and secure transmission and storage of information under the uncertainties coming from various types of random noise and adversarial behavior. Finance systems strive to maximize profits in spite of the uncertainties coming from natural and man-made events.
 % With the rapid growth of AIGC, probability theory inspired the design of model learning algorithms and architectures. For example, ChatGPT is a large model which outputs result with maximized likelihood of human language habits.
 The students will learn the fundamentals of probability that are necessary for several ECE courses and related fields and help them prepare for the career in the industry and academia.
@@ -57,15 +57,15 @@ The students will learn the fundamentals of probability that are necessary for s
             \begin{itemize}
                 \item HW Presentation: 20 times$\times$1 credit
                 \item Exam: 2 times$\times$50 credits
-                \item Bonus Project: 1 times$\times$20 credits
-                \item Optional Final: 1 times$\times$20 credits
+                \item Project Presentation: 1 times$\times$15 credits
+                \item Project appraisal: 1 times$\times$15 credits
             \end{itemize}
         }
         \item Exam Formats: {
             \begin{itemize}
-                \item In total 100 points in each exam. Each will convert to 50 credits in final grade.
-                \item 80 points questions from HW. Fill the blank. No partial credit.
-                \item 20 points questions from anywhere. With partial credit.
+                % \item In total 100 points in each exam. Each will convert to 50 credits in final grade.
+                \item 40 credits questions from HW. Fill the blank.
+                \item 10 credits questions from anywhere. True or False with punishment.
                 % \item 50 points challenge questions. Format unknown.
             \end{itemize}
         }
@@ -74,9 +74,8 @@ The students will learn the fundamentals of probability that are necessary for s
 
 \textbf{Textbook and Materials:} {
     \begin{enumerate}
-        \item \textbf{(Best For Beginner and Engineer)} \fullcite{Yates_Goodman_2015}\label{book:Yates_Goodman_2015}
-
-        \href{https://bcs.wiley.com/he-bcs/Books?action=index&itemId=1118324560&bcsId=8677}{\textbf{Student Companion Site}}
+        \item \textbf{(For Beginner and Engineer)} \fullcite{Yates_Goodman_2015}\label{book:Yates_Goodman_2015}
+        \href{https://bcs.wiley.com/he-bcs/Books?action=index&itemId=1118324560&bcsId=8677}{\textbf{Companion Site}}
         \item \textbf{(Beginner Alternative)} \fullcite{94107244}
         % \item \textbf{(Classic Alternative)} \fullcite{91610706}
         \item \textbf{(Engineer Alternative)} \href{https://www.probabilitycourse.com/}{Introduction to Probability, Statistics, and Random Processes} by Pishro-Nik
@@ -85,13 +84,15 @@ The students will learn the fundamentals of probability that are necessary for s
         % \item \textbf{(Advanced Choice)} \fullcite{94013254}
         \item \textbf{(Lecture Note)} \href{https://github.com/kwang0913/MyLatex/blob/main/2023ECE226Note/main.pdf}{Probability and Random Processes} by Kailong Wang
         % \item \textbf{(Path to Intermediate)} \fullcite{91978890}
+        \item \textbf{(Alternative Note)} \href{https://web.ma.utexas.edu/users/gordanz/lecture_notes_page.html}{Introduction to Mathematical Statistics
+        } Chapter $1\sim7$ by Gordanz
     \end{enumerate}
 }
 
 \textbf{Extended Reading:}{
     \begin{enumerate}
-            \item \textbf{(Publication of Turing Award Recipients)} \fullcite{98333950}
             \item \textbf{(Publication of Nobel Memorial Prize in Economic Sciences Recipients)} \fullcite{93150815}
+            \item \textbf{(Publication of Turing Award Recipients)} \fullcite{98333950}
             \item \textbf{(Read at Your Own Risk!!!)} \fullcite{93574984}
     \end{enumerate}
 }
@@ -110,16 +111,16 @@ The students will learn the fundamentals of probability that are necessary for s
         \item \textbf{(Chapter 5)} Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
         \item Examples and Exercises
         \item Review
-        \item Exam 1 (Cover Day1 to Day9)
+        \item Exam 1 (Cover Day2 to Day9)
         \item \textbf{(Chapter 7)} Conditional Probability Models
+        \item Examples and Exercises
         \item Examples and Exercises
         \item \textbf{(Chapter 6,9)} Derived Random Variables, Moment Generating Function and Central Limit Theorem
         \item Examples and Exercises
         \item Introduction of Information Theory
-        \item Examples and Exercises
         \item Review
         \item Exam 2 (Cover Day10 to Day17)
-        \item Random Topics
+        \item Applications of Probability Theory in Modern Technology
         \item Bonus Presentation and Optional Final
     \end{enumerate}
 }
