--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -102,11 +102,15 @@
 \def\eg{\emph{e.g}\onedot} \def\Eg{\emph{E.g}\onedot}
 \def\ie{\emph{i.e}\onedot} \def\Ie{\emph{I.e}\onedot}
 \def\cf{\emph{cf}\onedot} \def\Cf{\emph{Cf}\onedot}
-\def\etc{\emph{etc}\onedot} \def\vs{\emph{vs}\onedot}
-\def\wrt{w.r.t\onedot} \def\dof{d.o.f\onedot}
-\def\iid{i.i.d\onedot} \def\wolog{w.l.o.g\onedot}
+\def\etc{\emph{etc}\onedot}
+\def\vs{\emph{vs}\onedot}
+\def\wrt{w.r.t\onedot}
+\def\dof{d.o.f\onedot}
+\def\iid{i.i.d\onedot}
+\def\wolog{w.l.o.g\onedot}
 \def\etal{\emph{et al}\onedot}
 \def\whp{w.h.p\onedot}
+\def\aka{\emph{a.k.a}\onedot}
 \makeatother
 
 %%%% A box fill the rest of the page
