--- a/2023ECE226Quiz/main.tex
+++ b/2023ECE226Quiz/main.tex
@@ -11,7 +11,7 @@
 \fancyhf{}
 \fancyhead[L]{ECE 14:332:226}
 \fancyhead[C]{\textbf{Probability And Random Processes}}
-\fancyhead[R]{Spring 2023}
+\fancyhead[R]{Summer 2023}
 \fancyfoot[L]{}
 \fancyfoot[C]{\thepage}
 \fancyfoot[R]{}
@@ -23,7 +23,7 @@
 \input{../Formats/Macro.tex}
 % \allowpagebreaks
 %%%% Document Information %%%%
-\title{In-Recitation Quiz (Cover Pset8)}
+\title{HW 1}
 \author{}
 \date{}
 
