--- a/2023ECE226Summer/Syllabus.tex
+++ b/2023ECE226Summer/Syllabus.tex
@@ -121,7 +121,7 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Review
         \item Exam 2 (Cover Day10 to Day17)
         \item Applications of Probability Theory in Modern Technology
-        \item Bonus Presentation and Optional Final
+        \item Final Presentation and Appraisal
     \end{enumerate}
 }
 
